# ssv-data-platform

./: .gitignore  README.md  failures.txt  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  monitor.yml
docs/: alerting.md  dev-prod-flow.md  dr-runbook.md  fabric-cicd-evaluation.md
docs/adr/: 0001-pipeline-logic-stays-in-notebooks.md
docs/architecture/: build_flow.mjs  eod-sales-flow.drawio
fabric_items/: folders.json  manifest.json  parameter.yml
fabric_items/EOD Sale Service Dashboard.Report/: .platform  definition.pbir
fabric_items/EOD Sales Product Dashboard.Report/: definition.pbir
fabric_items/Notebook_test.Notebook/: notebook-content.ipynb
fabric_items/Pipeline_eod_sale_product.DataPipeline/: .platform  pipeline-content.json
fabric_items/Pipeline_eod_sale_service.DataPipeline/: .platform  pipeline-content.json
fabric_items/Sales Service.SemanticModel/: .platform
fabric_items/bi_service_refresh.py.Notebook/: .platform  notebook-content.ipynb
fabric_items/bronze.py.Notebook/: notebook-content.ipynb
sample_file/: bronze.py.ipynb  create_report_pbir.py  dq_check.py.ipynb  gold.py.ipynb  main.py.ipynb  nb_bi_refresh.py.ipynb  pipeline.py.ipynb  silver.py.ipynb
sample_service/: Dockerfile  api_service.py  worker.js
ssv_data/: config.py
ssv_data/io/: readers.py  (+1 more)
tests/: test_cast.py  test_demographics.py  test_readers_windowed.py  test_run_log.py  test_scd.py  test_window.py  test_writers.py
tools/: baseline_sales_daily.json  check_runs.py  deploy_definitions.py  deploy_wheel.py  export_definitions.py  fabric_api.py  verify_run.py
(+155 files in other folders)
